# adventofcode

2022/: Cargo.toml  init.sh  template.rs
2022/day01/: problem.md
2022/day02/: problem.md
2022/day03/: problem.md
2022/day03/src/: main.rs
2022/day04/src/: main.rs
2022/day05/src/: main.rs
2022/day08/src/: main.rs
2022/day09/: problem.md
2022/day1/: problem.md
2022/day1/src/: main.rs
2022/day10/: problem.md
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/src/: main.rs
2022/day13/src/: main.rs
2022/day14/: Cargo.toml
2022/day14/src/: main.rs
2022/day2/: problem.md
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/: problem.md
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/src/: main.rs
2022/day7/: problem.md
2022/day7/src/: main.rs
2022/day8/src/: main.rs
2022/day9/src/: main.rs
2023/: .gitignore  Cargo.toml  something.txt  something3.txt
2023/aoc/: .gitignore  Cargo.toml
2023/benches/: d10.rs  d11.rs  d12.rs
2023/src/: bin.rs  lib.rs  main.rs
2023/src/ttt/: lib.rs
2023/tests/d12/: input3.txt
2023/tests/d13/: input3.txt
