[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [rust]
# debuginfo-level = 1

[dependencies]

[profile.bench]
debug = true

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "d10"
harness = false
